<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_tmc_collision</name>
  <version>0.1.0</version>
  <description>Pliugin for the ED world model to generate TMC collision environments for motion planning</description>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>TODO</license>

  <url type="repository">http://github.com/tue-robotics/ed_tmc_collision.git</url>
  <url type="bugtracker">http://github.com/tue-robotics/ed_tmc_collision/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ed</depend>
  <depend>ed_tmc_collision_msgs</depend>
  <depend>libboost-filesystem-dev</depend>
  <depend>roscpp</depend>

  <build_depend>geolib2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tmc_manipulation_msgs</build_depend>

  <exec_depend>geolib2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tmc_manipulation_msgs</exec_depend>

  <test_depend>catkin_lint_cmake</test_depend>

  <export>
    <ed plugin="${prefix}/plugins.xml" />
  </export>
</package>
