<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_tmc_collision_msgs</name>
  <version>0.1.0</version>
  <description>Service definition to request TMC collision environment from the ED world model</description>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>TODO</license>

  <url type="repository">http://github.com/tue-robotics/ed_tmc_collision.git</url>
  <url type="bugtracker">http://github.com/tue-robotics/ed_tmc_collision/issues</url>

  <author email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tmc_manipulation_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <test_depend>catkin_lint_cmake</test_depend>

</package>
